--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
     "next": "14.2.15",
+    "openai": "^4.68.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
