--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "mongoose": "^8.7.2",
     "next": "14.2.15",
     "openai": "^4.68.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "stripe": "^17.2.0"
+    "stripe": "^17.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
