--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@upstash/redis": "^1.34.3",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
