--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
     "@upstash/redis": "^1.34.3",
+    "clerk": "^0.8.3",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "openai": "^4.68.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "stream-browserify": "^3.0.0",
     "stripe": "^17.2.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "web-streams-polyfill": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
